parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> Program
Rule 1     Program -> Header Code
Rule 2     Program -> Code
Rule 3     Header -> Header Decl
Rule 4     Header -> Decl
Rule 5     Decl -> VAR NameList ;
Rule 6     NameList -> NAME
Rule 7     NameList -> NameList , NAME
Rule 8     Decl -> VAR NAME [ NUM ] ;
Rule 9     Decl -> VAR NAME [ NUM ] [ NUM ] ;
Rule 10    Code -> Code Codes
Rule 11    Code -> Codes
Rule 12    Codes -> Conditions
Rule 13    Codes -> WhileDo
Rule 14    Codes -> RepeatUntil
Rule 15    Codes -> Assign
Rule 16    Codes -> Print
Rule 17    Conditions -> IF ( Condition ) THEN { Code }
Rule 18    Conditions -> IF ( Condition ) THEN { Code } OTHERWISE { Code }
Rule 19    WhileDo -> WHILE ( Condition ) DO { Code }
Rule 20    RepeatUntil -> REPEAT { Code } UNTIL ( Condition )
Rule 21    Assign -> NAME = Expr ;
Rule 22    Assign -> NAME [ Expr ] = Expr ;
Rule 23    Assign -> NAME [ Expr ] [ Expr ] = Expr ;
Rule 24    Expr -> Condition
Rule 25    Expr -> Variable
Rule 26    Expr -> NUM
Rule 27    Expr -> Expr + Expr
Rule 28    Expr -> Expr - Expr
Rule 29    Expr -> Expr * Expr
Rule 30    Expr -> Expr / Expr
Rule 31    Expr -> Expr % Expr
Rule 32    Condition -> Expr EQ Expr
Rule 33    Condition -> Expr NEQ Expr
Rule 34    Condition -> ! Expr
Rule 35    Condition -> Expr > Expr
Rule 36    Condition -> Expr MOREEQ Expr
Rule 37    Condition -> Expr < Expr
Rule 38    Condition -> Expr LESSEQ Expr
Rule 39    Condition -> Expr AND Expr
Rule 40    Condition -> Expr OR Expr
Rule 41    Expr -> ( Expr )
Rule 42    Condition -> ( Condition )
Rule 43    Variable -> NAME
Rule 44    Variable -> NAME [ Expr ]
Rule 45    Variable -> NAME [ Expr ] [ Expr ]
Rule 46    Assign -> NAME [ Expr ] = INPUT ;
Rule 47    Assign -> NAME [ Expr ] [ Expr ] = INPUT ;
Rule 48    Assign -> NAME = INPUT ;
Rule 49    Print -> PRINT NAME ;

Terminals, with rules where they appear

!                    : 34
%                    : 31
(                    : 17 18 19 20 41 42
)                    : 17 18 19 20 41 42
*                    : 29
+                    : 27
,                    : 7
-                    : 28
/                    : 30
;                    : 5 8 9 21 22 23 46 47 48 49
<                    : 37
=                    : 21 22 23 46 47 48
>                    : 35
AND                  : 39
DO                   : 19
EQ                   : 32
IF                   : 17 18
INPUT                : 46 47 48
LESSEQ               : 38
MOREEQ               : 36
NAME                 : 6 7 8 9 21 22 23 43 44 45 46 47 48 49
NEQ                  : 33
NUM                  : 8 9 9 26
OR                   : 40
OTHERWISE            : 18
PRINT                : 49
REPEAT               : 20
THEN                 : 17 18
UNTIL                : 20
VAR                  : 5 8 9
WHILE                : 19
[                    : 8 9 9 22 23 23 44 45 45 46 47 47
]                    : 8 9 9 22 23 23 44 45 45 46 47 47
error                : 
{                    : 17 18 18 19 20
}                    : 17 18 18 19 20

Nonterminals, with rules where they appear

Assign               : 15
Code                 : 1 2 10 17 18 18 19 20
Codes                : 10 11
Condition            : 17 18 19 20 24 42
Conditions           : 12
Decl                 : 3 4
Expr                 : 21 22 22 23 23 23 27 27 28 28 29 29 30 30 31 31 32 32 33 33 34 35 35 36 36 37 37 38 38 39 39 40 40 41 44 45 45 46 47 47
Header               : 1 3
NameList             : 5 7
Print                : 16
Program              : 0
RepeatUntil          : 14
Variable             : 25
WhileDo              : 13

Parsing method: LALR

state 0

    (0) S' -> . Program
    (1) Program -> . Header Code
    (2) Program -> . Code
    (3) Header -> . Header Decl
    (4) Header -> . Decl
    (10) Code -> . Code Codes
    (11) Code -> . Codes
    (5) Decl -> . VAR NameList ;
    (8) Decl -> . VAR NAME [ NUM ] ;
    (9) Decl -> . VAR NAME [ NUM ] [ NUM ] ;
    (12) Codes -> . Conditions
    (13) Codes -> . WhileDo
    (14) Codes -> . RepeatUntil
    (15) Codes -> . Assign
    (16) Codes -> . Print
    (17) Conditions -> . IF ( Condition ) THEN { Code }
    (18) Conditions -> . IF ( Condition ) THEN { Code } OTHERWISE { Code }
    (19) WhileDo -> . WHILE ( Condition ) DO { Code }
    (20) RepeatUntil -> . REPEAT { Code } UNTIL ( Condition )
    (21) Assign -> . NAME = Expr ;
    (22) Assign -> . NAME [ Expr ] = Expr ;
    (23) Assign -> . NAME [ Expr ] [ Expr ] = Expr ;
    (46) Assign -> . NAME [ Expr ] = INPUT ;
    (47) Assign -> . NAME [ Expr ] [ Expr ] = INPUT ;
    (48) Assign -> . NAME = INPUT ;
    (49) Print -> . PRINT NAME ;

    VAR             shift and go to state 6
    IF              shift and go to state 13
    WHILE           shift and go to state 14
    REPEAT          shift and go to state 15
    NAME            shift and go to state 7
    PRINT           shift and go to state 16

    Program                        shift and go to state 1
    Header                         shift and go to state 2
    Code                           shift and go to state 3
    Decl                           shift and go to state 4
    Codes                          shift and go to state 5
    Conditions                     shift and go to state 8
    WhileDo                        shift and go to state 9
    RepeatUntil                    shift and go to state 10
    Assign                         shift and go to state 11
    Print                          shift and go to state 12

state 1

    (0) S' -> Program .



state 2

    (1) Program -> Header . Code
    (3) Header -> Header . Decl
    (10) Code -> . Code Codes
    (11) Code -> . Codes
    (5) Decl -> . VAR NameList ;
    (8) Decl -> . VAR NAME [ NUM ] ;
    (9) Decl -> . VAR NAME [ NUM ] [ NUM ] ;
    (12) Codes -> . Conditions
    (13) Codes -> . WhileDo
    (14) Codes -> . RepeatUntil
    (15) Codes -> . Assign
    (16) Codes -> . Print
    (17) Conditions -> . IF ( Condition ) THEN { Code }
    (18) Conditions -> . IF ( Condition ) THEN { Code } OTHERWISE { Code }
    (19) WhileDo -> . WHILE ( Condition ) DO { Code }
    (20) RepeatUntil -> . REPEAT { Code } UNTIL ( Condition )
    (21) Assign -> . NAME = Expr ;
    (22) Assign -> . NAME [ Expr ] = Expr ;
    (23) Assign -> . NAME [ Expr ] [ Expr ] = Expr ;
    (46) Assign -> . NAME [ Expr ] = INPUT ;
    (47) Assign -> . NAME [ Expr ] [ Expr ] = INPUT ;
    (48) Assign -> . NAME = INPUT ;
    (49) Print -> . PRINT NAME ;

    VAR             shift and go to state 6
    IF              shift and go to state 13
    WHILE           shift and go to state 14
    REPEAT          shift and go to state 15
    NAME            shift and go to state 7
    PRINT           shift and go to state 16

    Code                           shift and go to state 17
    Decl                           shift and go to state 18
    Codes                          shift and go to state 5
    Conditions                     shift and go to state 8
    WhileDo                        shift and go to state 9
    RepeatUntil                    shift and go to state 10
    Assign                         shift and go to state 11
    Print                          shift and go to state 12

state 3

    (2) Program -> Code .
    (10) Code -> Code . Codes
    (12) Codes -> . Conditions
    (13) Codes -> . WhileDo
    (14) Codes -> . RepeatUntil
    (15) Codes -> . Assign
    (16) Codes -> . Print
    (17) Conditions -> . IF ( Condition ) THEN { Code }
    (18) Conditions -> . IF ( Condition ) THEN { Code } OTHERWISE { Code }
    (19) WhileDo -> . WHILE ( Condition ) DO { Code }
    (20) RepeatUntil -> . REPEAT { Code } UNTIL ( Condition )
    (21) Assign -> . NAME = Expr ;
    (22) Assign -> . NAME [ Expr ] = Expr ;
    (23) Assign -> . NAME [ Expr ] [ Expr ] = Expr ;
    (46) Assign -> . NAME [ Expr ] = INPUT ;
    (47) Assign -> . NAME [ Expr ] [ Expr ] = INPUT ;
    (48) Assign -> . NAME = INPUT ;
    (49) Print -> . PRINT NAME ;

    $end            reduce using rule 2 (Program -> Code .)
    IF              shift and go to state 13
    WHILE           shift and go to state 14
    REPEAT          shift and go to state 15
    NAME            shift and go to state 7
    PRINT           shift and go to state 16

    Codes                          shift and go to state 19
    Conditions                     shift and go to state 8
    WhileDo                        shift and go to state 9
    RepeatUntil                    shift and go to state 10
    Assign                         shift and go to state 11
    Print                          shift and go to state 12

state 4

    (4) Header -> Decl .

    VAR             reduce using rule 4 (Header -> Decl .)
    IF              reduce using rule 4 (Header -> Decl .)
    WHILE           reduce using rule 4 (Header -> Decl .)
    REPEAT          reduce using rule 4 (Header -> Decl .)
    NAME            reduce using rule 4 (Header -> Decl .)
    PRINT           reduce using rule 4 (Header -> Decl .)


state 5

    (11) Code -> Codes .

    IF              reduce using rule 11 (Code -> Codes .)
    WHILE           reduce using rule 11 (Code -> Codes .)
    REPEAT          reduce using rule 11 (Code -> Codes .)
    NAME            reduce using rule 11 (Code -> Codes .)
    PRINT           reduce using rule 11 (Code -> Codes .)
    $end            reduce using rule 11 (Code -> Codes .)
    }               reduce using rule 11 (Code -> Codes .)


state 6

    (5) Decl -> VAR . NameList ;
    (8) Decl -> VAR . NAME [ NUM ] ;
    (9) Decl -> VAR . NAME [ NUM ] [ NUM ] ;
    (6) NameList -> . NAME
    (7) NameList -> . NameList , NAME

    NAME            shift and go to state 21

    NameList                       shift and go to state 20

state 7

    (21) Assign -> NAME . = Expr ;
    (22) Assign -> NAME . [ Expr ] = Expr ;
    (23) Assign -> NAME . [ Expr ] [ Expr ] = Expr ;
    (46) Assign -> NAME . [ Expr ] = INPUT ;
    (47) Assign -> NAME . [ Expr ] [ Expr ] = INPUT ;
    (48) Assign -> NAME . = INPUT ;

    =               shift and go to state 22
    [               shift and go to state 23


state 8

    (12) Codes -> Conditions .

    IF              reduce using rule 12 (Codes -> Conditions .)
    WHILE           reduce using rule 12 (Codes -> Conditions .)
    REPEAT          reduce using rule 12 (Codes -> Conditions .)
    NAME            reduce using rule 12 (Codes -> Conditions .)
    PRINT           reduce using rule 12 (Codes -> Conditions .)
    $end            reduce using rule 12 (Codes -> Conditions .)
    }               reduce using rule 12 (Codes -> Conditions .)


state 9

    (13) Codes -> WhileDo .

    IF              reduce using rule 13 (Codes -> WhileDo .)
    WHILE           reduce using rule 13 (Codes -> WhileDo .)
    REPEAT          reduce using rule 13 (Codes -> WhileDo .)
    NAME            reduce using rule 13 (Codes -> WhileDo .)
    PRINT           reduce using rule 13 (Codes -> WhileDo .)
    $end            reduce using rule 13 (Codes -> WhileDo .)
    }               reduce using rule 13 (Codes -> WhileDo .)


state 10

    (14) Codes -> RepeatUntil .

    IF              reduce using rule 14 (Codes -> RepeatUntil .)
    WHILE           reduce using rule 14 (Codes -> RepeatUntil .)
    REPEAT          reduce using rule 14 (Codes -> RepeatUntil .)
    NAME            reduce using rule 14 (Codes -> RepeatUntil .)
    PRINT           reduce using rule 14 (Codes -> RepeatUntil .)
    $end            reduce using rule 14 (Codes -> RepeatUntil .)
    }               reduce using rule 14 (Codes -> RepeatUntil .)


state 11

    (15) Codes -> Assign .

    IF              reduce using rule 15 (Codes -> Assign .)
    WHILE           reduce using rule 15 (Codes -> Assign .)
    REPEAT          reduce using rule 15 (Codes -> Assign .)
    NAME            reduce using rule 15 (Codes -> Assign .)
    PRINT           reduce using rule 15 (Codes -> Assign .)
    $end            reduce using rule 15 (Codes -> Assign .)
    }               reduce using rule 15 (Codes -> Assign .)


state 12

    (16) Codes -> Print .

    IF              reduce using rule 16 (Codes -> Print .)
    WHILE           reduce using rule 16 (Codes -> Print .)
    REPEAT          reduce using rule 16 (Codes -> Print .)
    NAME            reduce using rule 16 (Codes -> Print .)
    PRINT           reduce using rule 16 (Codes -> Print .)
    $end            reduce using rule 16 (Codes -> Print .)
    }               reduce using rule 16 (Codes -> Print .)


state 13

    (17) Conditions -> IF . ( Condition ) THEN { Code }
    (18) Conditions -> IF . ( Condition ) THEN { Code } OTHERWISE { Code }

    (               shift and go to state 24


state 14

    (19) WhileDo -> WHILE . ( Condition ) DO { Code }

    (               shift and go to state 25


state 15

    (20) RepeatUntil -> REPEAT . { Code } UNTIL ( Condition )

    {               shift and go to state 26


state 16

    (49) Print -> PRINT . NAME ;

    NAME            shift and go to state 27


state 17

    (1) Program -> Header Code .
    (10) Code -> Code . Codes
    (12) Codes -> . Conditions
    (13) Codes -> . WhileDo
    (14) Codes -> . RepeatUntil
    (15) Codes -> . Assign
    (16) Codes -> . Print
    (17) Conditions -> . IF ( Condition ) THEN { Code }
    (18) Conditions -> . IF ( Condition ) THEN { Code } OTHERWISE { Code }
    (19) WhileDo -> . WHILE ( Condition ) DO { Code }
    (20) RepeatUntil -> . REPEAT { Code } UNTIL ( Condition )
    (21) Assign -> . NAME = Expr ;
    (22) Assign -> . NAME [ Expr ] = Expr ;
    (23) Assign -> . NAME [ Expr ] [ Expr ] = Expr ;
    (46) Assign -> . NAME [ Expr ] = INPUT ;
    (47) Assign -> . NAME [ Expr ] [ Expr ] = INPUT ;
    (48) Assign -> . NAME = INPUT ;
    (49) Print -> . PRINT NAME ;

    $end            reduce using rule 1 (Program -> Header Code .)
    IF              shift and go to state 13
    WHILE           shift and go to state 14
    REPEAT          shift and go to state 15
    NAME            shift and go to state 7
    PRINT           shift and go to state 16

    Codes                          shift and go to state 19
    Conditions                     shift and go to state 8
    WhileDo                        shift and go to state 9
    RepeatUntil                    shift and go to state 10
    Assign                         shift and go to state 11
    Print                          shift and go to state 12

state 18

    (3) Header -> Header Decl .

    VAR             reduce using rule 3 (Header -> Header Decl .)
    IF              reduce using rule 3 (Header -> Header Decl .)
    WHILE           reduce using rule 3 (Header -> Header Decl .)
    REPEAT          reduce using rule 3 (Header -> Header Decl .)
    NAME            reduce using rule 3 (Header -> Header Decl .)
    PRINT           reduce using rule 3 (Header -> Header Decl .)


state 19

    (10) Code -> Code Codes .

    IF              reduce using rule 10 (Code -> Code Codes .)
    WHILE           reduce using rule 10 (Code -> Code Codes .)
    REPEAT          reduce using rule 10 (Code -> Code Codes .)
    NAME            reduce using rule 10 (Code -> Code Codes .)
    PRINT           reduce using rule 10 (Code -> Code Codes .)
    $end            reduce using rule 10 (Code -> Code Codes .)
    }               reduce using rule 10 (Code -> Code Codes .)


state 20

    (5) Decl -> VAR NameList . ;
    (7) NameList -> NameList . , NAME

    ;               shift and go to state 28
    ,               shift and go to state 29


state 21

    (8) Decl -> VAR NAME . [ NUM ] ;
    (9) Decl -> VAR NAME . [ NUM ] [ NUM ] ;
    (6) NameList -> NAME .

    [               shift and go to state 30
    ;               reduce using rule 6 (NameList -> NAME .)
    ,               reduce using rule 6 (NameList -> NAME .)


state 22

    (21) Assign -> NAME = . Expr ;
    (48) Assign -> NAME = . INPUT ;
    (24) Expr -> . Condition
    (25) Expr -> . Variable
    (26) Expr -> . NUM
    (27) Expr -> . Expr + Expr
    (28) Expr -> . Expr - Expr
    (29) Expr -> . Expr * Expr
    (30) Expr -> . Expr / Expr
    (31) Expr -> . Expr % Expr
    (41) Expr -> . ( Expr )
    (32) Condition -> . Expr EQ Expr
    (33) Condition -> . Expr NEQ Expr
    (34) Condition -> . ! Expr
    (35) Condition -> . Expr > Expr
    (36) Condition -> . Expr MOREEQ Expr
    (37) Condition -> . Expr < Expr
    (38) Condition -> . Expr LESSEQ Expr
    (39) Condition -> . Expr AND Expr
    (40) Condition -> . Expr OR Expr
    (42) Condition -> . ( Condition )
    (43) Variable -> . NAME
    (44) Variable -> . NAME [ Expr ]
    (45) Variable -> . NAME [ Expr ] [ Expr ]

    INPUT           shift and go to state 33
    NUM             shift and go to state 36
    (               shift and go to state 37
    !               shift and go to state 38
    NAME            shift and go to state 31

    Expr                           shift and go to state 32
    Condition                      shift and go to state 34
    Variable                       shift and go to state 35

state 23

    (22) Assign -> NAME [ . Expr ] = Expr ;
    (23) Assign -> NAME [ . Expr ] [ Expr ] = Expr ;
    (46) Assign -> NAME [ . Expr ] = INPUT ;
    (47) Assign -> NAME [ . Expr ] [ Expr ] = INPUT ;
    (24) Expr -> . Condition
    (25) Expr -> . Variable
    (26) Expr -> . NUM
    (27) Expr -> . Expr + Expr
    (28) Expr -> . Expr - Expr
    (29) Expr -> . Expr * Expr
    (30) Expr -> . Expr / Expr
    (31) Expr -> . Expr % Expr
    (41) Expr -> . ( Expr )
    (32) Condition -> . Expr EQ Expr
    (33) Condition -> . Expr NEQ Expr
    (34) Condition -> . ! Expr
    (35) Condition -> . Expr > Expr
    (36) Condition -> . Expr MOREEQ Expr
    (37) Condition -> . Expr < Expr
    (38) Condition -> . Expr LESSEQ Expr
    (39) Condition -> . Expr AND Expr
    (40) Condition -> . Expr OR Expr
    (42) Condition -> . ( Condition )
    (43) Variable -> . NAME
    (44) Variable -> . NAME [ Expr ]
    (45) Variable -> . NAME [ Expr ] [ Expr ]

    NUM             shift and go to state 36
    (               shift and go to state 37
    !               shift and go to state 38
    NAME            shift and go to state 31

    Expr                           shift and go to state 39
    Condition                      shift and go to state 34
    Variable                       shift and go to state 35

state 24

    (17) Conditions -> IF ( . Condition ) THEN { Code }
    (18) Conditions -> IF ( . Condition ) THEN { Code } OTHERWISE { Code }
    (32) Condition -> . Expr EQ Expr
    (33) Condition -> . Expr NEQ Expr
    (34) Condition -> . ! Expr
    (35) Condition -> . Expr > Expr
    (36) Condition -> . Expr MOREEQ Expr
    (37) Condition -> . Expr < Expr
    (38) Condition -> . Expr LESSEQ Expr
    (39) Condition -> . Expr AND Expr
    (40) Condition -> . Expr OR Expr
    (42) Condition -> . ( Condition )
    (24) Expr -> . Condition
    (25) Expr -> . Variable
    (26) Expr -> . NUM
    (27) Expr -> . Expr + Expr
    (28) Expr -> . Expr - Expr
    (29) Expr -> . Expr * Expr
    (30) Expr -> . Expr / Expr
    (31) Expr -> . Expr % Expr
    (41) Expr -> . ( Expr )
    (43) Variable -> . NAME
    (44) Variable -> . NAME [ Expr ]
    (45) Variable -> . NAME [ Expr ] [ Expr ]

    !               shift and go to state 38
    (               shift and go to state 40
    NUM             shift and go to state 36
    NAME            shift and go to state 31

    Condition                      shift and go to state 41
    Expr                           shift and go to state 42
    Variable                       shift and go to state 35

state 25

    (19) WhileDo -> WHILE ( . Condition ) DO { Code }
    (32) Condition -> . Expr EQ Expr
    (33) Condition -> . Expr NEQ Expr
    (34) Condition -> . ! Expr
    (35) Condition -> . Expr > Expr
    (36) Condition -> . Expr MOREEQ Expr
    (37) Condition -> . Expr < Expr
    (38) Condition -> . Expr LESSEQ Expr
    (39) Condition -> . Expr AND Expr
    (40) Condition -> . Expr OR Expr
    (42) Condition -> . ( Condition )
    (24) Expr -> . Condition
    (25) Expr -> . Variable
    (26) Expr -> . NUM
    (27) Expr -> . Expr + Expr
    (28) Expr -> . Expr - Expr
    (29) Expr -> . Expr * Expr
    (30) Expr -> . Expr / Expr
    (31) Expr -> . Expr % Expr
    (41) Expr -> . ( Expr )
    (43) Variable -> . NAME
    (44) Variable -> . NAME [ Expr ]
    (45) Variable -> . NAME [ Expr ] [ Expr ]

    !               shift and go to state 38
    (               shift and go to state 40
    NUM             shift and go to state 36
    NAME            shift and go to state 31

    Condition                      shift and go to state 43
    Expr                           shift and go to state 42
    Variable                       shift and go to state 35

state 26

    (20) RepeatUntil -> REPEAT { . Code } UNTIL ( Condition )
    (10) Code -> . Code Codes
    (11) Code -> . Codes
    (12) Codes -> . Conditions
    (13) Codes -> . WhileDo
    (14) Codes -> . RepeatUntil
    (15) Codes -> . Assign
    (16) Codes -> . Print
    (17) Conditions -> . IF ( Condition ) THEN { Code }
    (18) Conditions -> . IF ( Condition ) THEN { Code } OTHERWISE { Code }
    (19) WhileDo -> . WHILE ( Condition ) DO { Code }
    (20) RepeatUntil -> . REPEAT { Code } UNTIL ( Condition )
    (21) Assign -> . NAME = Expr ;
    (22) Assign -> . NAME [ Expr ] = Expr ;
    (23) Assign -> . NAME [ Expr ] [ Expr ] = Expr ;
    (46) Assign -> . NAME [ Expr ] = INPUT ;
    (47) Assign -> . NAME [ Expr ] [ Expr ] = INPUT ;
    (48) Assign -> . NAME = INPUT ;
    (49) Print -> . PRINT NAME ;

    IF              shift and go to state 13
    WHILE           shift and go to state 14
    REPEAT          shift and go to state 15
    NAME            shift and go to state 7
    PRINT           shift and go to state 16

    Code                           shift and go to state 44
    Codes                          shift and go to state 5
    Conditions                     shift and go to state 8
    WhileDo                        shift and go to state 9
    RepeatUntil                    shift and go to state 10
    Assign                         shift and go to state 11
    Print                          shift and go to state 12

state 27

    (49) Print -> PRINT NAME . ;

    ;               shift and go to state 45


state 28

    (5) Decl -> VAR NameList ; .

    VAR             reduce using rule 5 (Decl -> VAR NameList ; .)
    IF              reduce using rule 5 (Decl -> VAR NameList ; .)
    WHILE           reduce using rule 5 (Decl -> VAR NameList ; .)
    REPEAT          reduce using rule 5 (Decl -> VAR NameList ; .)
    NAME            reduce using rule 5 (Decl -> VAR NameList ; .)
    PRINT           reduce using rule 5 (Decl -> VAR NameList ; .)


state 29

    (7) NameList -> NameList , . NAME

    NAME            shift and go to state 46


state 30

    (8) Decl -> VAR NAME [ . NUM ] ;
    (9) Decl -> VAR NAME [ . NUM ] [ NUM ] ;

    NUM             shift and go to state 47


state 31

    (43) Variable -> NAME .
    (44) Variable -> NAME . [ Expr ]
    (45) Variable -> NAME . [ Expr ] [ Expr ]

    ;               reduce using rule 43 (Variable -> NAME .)
    +               reduce using rule 43 (Variable -> NAME .)
    -               reduce using rule 43 (Variable -> NAME .)
    *               reduce using rule 43 (Variable -> NAME .)
    /               reduce using rule 43 (Variable -> NAME .)
    %               reduce using rule 43 (Variable -> NAME .)
    EQ              reduce using rule 43 (Variable -> NAME .)
    NEQ             reduce using rule 43 (Variable -> NAME .)
    >               reduce using rule 43 (Variable -> NAME .)
    MOREEQ          reduce using rule 43 (Variable -> NAME .)
    <               reduce using rule 43 (Variable -> NAME .)
    LESSEQ          reduce using rule 43 (Variable -> NAME .)
    AND             reduce using rule 43 (Variable -> NAME .)
    OR              reduce using rule 43 (Variable -> NAME .)
    ]               reduce using rule 43 (Variable -> NAME .)
    )               reduce using rule 43 (Variable -> NAME .)
    [               shift and go to state 48


state 32

    (21) Assign -> NAME = Expr . ;
    (27) Expr -> Expr . + Expr
    (28) Expr -> Expr . - Expr
    (29) Expr -> Expr . * Expr
    (30) Expr -> Expr . / Expr
    (31) Expr -> Expr . % Expr
    (32) Condition -> Expr . EQ Expr
    (33) Condition -> Expr . NEQ Expr
    (35) Condition -> Expr . > Expr
    (36) Condition -> Expr . MOREEQ Expr
    (37) Condition -> Expr . < Expr
    (38) Condition -> Expr . LESSEQ Expr
    (39) Condition -> Expr . AND Expr
    (40) Condition -> Expr . OR Expr

    ;               shift and go to state 49
    +               shift and go to state 50
    -               shift and go to state 51
    *               shift and go to state 52
    /               shift and go to state 53
    %               shift and go to state 54
    EQ              shift and go to state 55
    NEQ             shift and go to state 56
    >               shift and go to state 57
    MOREEQ          shift and go to state 58
    <               shift and go to state 59
    LESSEQ          shift and go to state 60
    AND             shift and go to state 61
    OR              shift and go to state 62


state 33

    (48) Assign -> NAME = INPUT . ;

    ;               shift and go to state 63


state 34

    (24) Expr -> Condition .

    ;               reduce using rule 24 (Expr -> Condition .)
    +               reduce using rule 24 (Expr -> Condition .)
    -               reduce using rule 24 (Expr -> Condition .)
    *               reduce using rule 24 (Expr -> Condition .)
    /               reduce using rule 24 (Expr -> Condition .)
    %               reduce using rule 24 (Expr -> Condition .)
    EQ              reduce using rule 24 (Expr -> Condition .)
    NEQ             reduce using rule 24 (Expr -> Condition .)
    >               reduce using rule 24 (Expr -> Condition .)
    MOREEQ          reduce using rule 24 (Expr -> Condition .)
    <               reduce using rule 24 (Expr -> Condition .)
    LESSEQ          reduce using rule 24 (Expr -> Condition .)
    AND             reduce using rule 24 (Expr -> Condition .)
    OR              reduce using rule 24 (Expr -> Condition .)
    ]               reduce using rule 24 (Expr -> Condition .)
    )               reduce using rule 24 (Expr -> Condition .)


state 35

    (25) Expr -> Variable .

    ;               reduce using rule 25 (Expr -> Variable .)
    +               reduce using rule 25 (Expr -> Variable .)
    -               reduce using rule 25 (Expr -> Variable .)
    *               reduce using rule 25 (Expr -> Variable .)
    /               reduce using rule 25 (Expr -> Variable .)
    %               reduce using rule 25 (Expr -> Variable .)
    EQ              reduce using rule 25 (Expr -> Variable .)
    NEQ             reduce using rule 25 (Expr -> Variable .)
    >               reduce using rule 25 (Expr -> Variable .)
    MOREEQ          reduce using rule 25 (Expr -> Variable .)
    <               reduce using rule 25 (Expr -> Variable .)
    LESSEQ          reduce using rule 25 (Expr -> Variable .)
    AND             reduce using rule 25 (Expr -> Variable .)
    OR              reduce using rule 25 (Expr -> Variable .)
    ]               reduce using rule 25 (Expr -> Variable .)
    )               reduce using rule 25 (Expr -> Variable .)


state 36

    (26) Expr -> NUM .

    ;               reduce using rule 26 (Expr -> NUM .)
    +               reduce using rule 26 (Expr -> NUM .)
    -               reduce using rule 26 (Expr -> NUM .)
    *               reduce using rule 26 (Expr -> NUM .)
    /               reduce using rule 26 (Expr -> NUM .)
    %               reduce using rule 26 (Expr -> NUM .)
    EQ              reduce using rule 26 (Expr -> NUM .)
    NEQ             reduce using rule 26 (Expr -> NUM .)
    >               reduce using rule 26 (Expr -> NUM .)
    MOREEQ          reduce using rule 26 (Expr -> NUM .)
    <               reduce using rule 26 (Expr -> NUM .)
    LESSEQ          reduce using rule 26 (Expr -> NUM .)
    AND             reduce using rule 26 (Expr -> NUM .)
    OR              reduce using rule 26 (Expr -> NUM .)
    ]               reduce using rule 26 (Expr -> NUM .)
    )               reduce using rule 26 (Expr -> NUM .)


state 37

    (41) Expr -> ( . Expr )
    (42) Condition -> ( . Condition )
    (24) Expr -> . Condition
    (25) Expr -> . Variable
    (26) Expr -> . NUM
    (27) Expr -> . Expr + Expr
    (28) Expr -> . Expr - Expr
    (29) Expr -> . Expr * Expr
    (30) Expr -> . Expr / Expr
    (31) Expr -> . Expr % Expr
    (41) Expr -> . ( Expr )
    (32) Condition -> . Expr EQ Expr
    (33) Condition -> . Expr NEQ Expr
    (34) Condition -> . ! Expr
    (35) Condition -> . Expr > Expr
    (36) Condition -> . Expr MOREEQ Expr
    (37) Condition -> . Expr < Expr
    (38) Condition -> . Expr LESSEQ Expr
    (39) Condition -> . Expr AND Expr
    (40) Condition -> . Expr OR Expr
    (42) Condition -> . ( Condition )
    (43) Variable -> . NAME
    (44) Variable -> . NAME [ Expr ]
    (45) Variable -> . NAME [ Expr ] [ Expr ]

    NUM             shift and go to state 36
    (               shift and go to state 37
    !               shift and go to state 38
    NAME            shift and go to state 31

    Expr                           shift and go to state 64
    Condition                      shift and go to state 65
    Variable                       shift and go to state 35

state 38

    (34) Condition -> ! . Expr
    (24) Expr -> . Condition
    (25) Expr -> . Variable
    (26) Expr -> . NUM
    (27) Expr -> . Expr + Expr
    (28) Expr -> . Expr - Expr
    (29) Expr -> . Expr * Expr
    (30) Expr -> . Expr / Expr
    (31) Expr -> . Expr % Expr
    (41) Expr -> . ( Expr )
    (32) Condition -> . Expr EQ Expr
    (33) Condition -> . Expr NEQ Expr
    (34) Condition -> . ! Expr
    (35) Condition -> . Expr > Expr
    (36) Condition -> . Expr MOREEQ Expr
    (37) Condition -> . Expr < Expr
    (38) Condition -> . Expr LESSEQ Expr
    (39) Condition -> . Expr AND Expr
    (40) Condition -> . Expr OR Expr
    (42) Condition -> . ( Condition )
    (43) Variable -> . NAME
    (44) Variable -> . NAME [ Expr ]
    (45) Variable -> . NAME [ Expr ] [ Expr ]

    NUM             shift and go to state 36
    (               shift and go to state 37
    !               shift and go to state 38
    NAME            shift and go to state 31

    Expr                           shift and go to state 66
    Condition                      shift and go to state 34
    Variable                       shift and go to state 35

state 39

    (22) Assign -> NAME [ Expr . ] = Expr ;
    (23) Assign -> NAME [ Expr . ] [ Expr ] = Expr ;
    (46) Assign -> NAME [ Expr . ] = INPUT ;
    (47) Assign -> NAME [ Expr . ] [ Expr ] = INPUT ;
    (27) Expr -> Expr . + Expr
    (28) Expr -> Expr . - Expr
    (29) Expr -> Expr . * Expr
    (30) Expr -> Expr . / Expr
    (31) Expr -> Expr . % Expr
    (32) Condition -> Expr . EQ Expr
    (33) Condition -> Expr . NEQ Expr
    (35) Condition -> Expr . > Expr
    (36) Condition -> Expr . MOREEQ Expr
    (37) Condition -> Expr . < Expr
    (38) Condition -> Expr . LESSEQ Expr
    (39) Condition -> Expr . AND Expr
    (40) Condition -> Expr . OR Expr

    ]               shift and go to state 67
    +               shift and go to state 50
    -               shift and go to state 51
    *               shift and go to state 52
    /               shift and go to state 53
    %               shift and go to state 54
    EQ              shift and go to state 55
    NEQ             shift and go to state 56
    >               shift and go to state 57
    MOREEQ          shift and go to state 58
    <               shift and go to state 59
    LESSEQ          shift and go to state 60
    AND             shift and go to state 61
    OR              shift and go to state 62


state 40
